# gstreamer_plugin

./: .gitignore  CMakeLists.txt
simple_plugin/: CMakeLists.txt
simple_plugin/src/: gst_simple_plugin_src.c  gst_simple_plugin_src.h
simple_plugin_tester/: CMakeLists.txt
simple_plugin_tester/src/: main.c
